2008-07-16  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed scrolling behaviour of the GUI once more...

	* Fixed a bug in prodcollectnum which would touch the tree above
	the entry point and thereby broke subtle cases of substitute which
	relied on the entry point containing a zero multiplier for
	vanishing terms (see test 6 in defaults.cdb).

2008-07-07  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.139

	* Various improvements/fixes to GUI notebook view focus.

	* Fixed a bug which would leave the tree in inconsistent state
	after some uses of @unwrap.

	* Squashed a bug which would apply default rules on the wrong
	expression. 

2008-07-05  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Deleting an input cell now correctly re-positions the cursor in
	the next input cell or open TeX cell.

2008-07-04  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug which would make patterns occurring at any level
	other than the first always be treated as patterns, never as
	literal. This would mess up @collect_terms on e.g.

	     \commutator{B??}{\commutator{C??}{A??}} 
	                 + \commutator{C??}{\commutator{B??}{A??};

2008-07-03  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.138

	* Fixed a long-standing bug related to handling of active nodes in
	default rules.

	* Fixed display behaviour of \conditional, \unequals and \regex.

2008-07-02  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed paste behaviour in the GUI (put cursor after pasted text,
	disable selection).

	* Fixed a bug related to canonicalisation of expressions with
	pattern indices.

2008-06-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Moved to GIT.

2008-06-27  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Separated the source code for the GUI into several files to make
	it more readable.

	* Added documentation for reserved node names as well as
	context-sensitive help for them.

2008-06-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>
