@@ -1,12 +1,0 @@
-\cdbalgorithm{ricci\_can\_order}{}
-
-Rewrites all terms with 
-two Weyl or Riemann tensors which are doubly contracted in a
-canonical form, that is, with the contracted indices sitting on mixed
-pairs. The identity that is used is
-\begin{equation}
-R_{a b m n} R_{c d m n} 
-% = 2\, R_{a m n b} R_{c d m n}\, .
-% = 2\, R_{a m n b} ( R_{c m n d} + R_{c n d m} )
- = 2\, R_{a m n b} ( R_{c m n d} - R_{d m n c} )\, .
-\end{equation}
