@@ -1,3 +1,3 @@
-\cdbreserved{div}{}
+\cdbreserved{frac}{}
 
 Denotes a generic ratio of objects. 
